-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.3.0 RC1
-
None
-
3f66dc4caf94a3d4dd995798427121bbf884114c
I've been prototyping a game with the same scaling mechanics as QTBUG-35457, and found that when switching from a static Image to AnimatedSprite, that the result is blurry instead of "blocky".
Since http://qt-project.org/doc/qt-5/qml-qtquick-item.html#smooth-prop states that smooth is primarily used in Image-based items, I think it makes sense that this should be implemented for AnimatedSprite.